# OSM-binary

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README  README.md  ReleaseNotes.txt  build.sh  build.xml  magic  pom.xml
.github/actions/build-windows/: action.yml
.github/actions/install-macos/: action.yml
.github/actions/install-ubuntu/: action.yml
.github/actions/install-windows/: action.yml
.github/workflows/: c.yml  java.yml
debian/: .gitignore  changelog  clean  control  copyright  docs  libosmpbf-java.install  osmpbf-bin.manpages  rules  watch
include/osmpbf/: osmpbf.h
osmpbf/: CMakeLists.txt  LICENSE  fileformat.proto  osmformat.proto
redhat/: osmpbf.spec  osmpbf_libdir.patch
resources/: GranFileBlock1-deflate.osm.pbf  GranFileBlock1-none.osm.pbf  SimpleFileBlock1-deflate.osm.pbf  SimpleFileBlock1-none.osm.pbf  broken7000bytes.pbf
src/: CMakeLists.txt  Makefile  OsmpbfConfig.cmake.in  fileformat.proto  osmformat.proto  osmpbf.h  osmpbf.pc.in
src.java/crosby/binary/: BinaryParser.java  BinarySerializer.java  StringTable.java
src.java/crosby/binary/file/: BlockInputStream.java  BlockOutputStream.java  BlockReaderAdapter.java  CompressFlags.java  FileBlock.java  FileBlockBase.java  FileBlockHead.java  FileBlockPosition.java  FileBlockReference.java  FileFormatException.java
src.java/crosby/binary/test/: BuildTestFile.java  ReadFileExample.java
test.java/crosby/binary/: BuildTestFile.java  ReadFileExample.java  ReadFileTest.java  WriteFileTest.java
tools/: .gitignore  CMakeLists.txt  Makefile  osmpbf-outline.1  osmpbf-outline.cpp
